# gnoMint

./: .gitignore  AUTHORS  CLAUDE.md  CODE_OF_CONDUCT.md  ChangeLog  Makefile.am  NEWS  README  TEST  TODO  autogen.sh  config.h.in  configure.ac  configure.in  gnomint.spec.in  help  net.sourceforge.gnomint.yml  org.gnome.gnomint.yml  update-svncl.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/workflows/: copilot-setup-steps.yml  multiplatform.yml
certs/: davefx.pem  example-ca-web-gnomint.gnomint  example-ca.5.gnomint  example-ca.6.gnomint  example-ca.7.gnomint  example-ca.gnomint  test-cert.pem  test-gnutls.c  y2038-cert.pem
certs/openssl-example/: cacert.key  cacert.pem  index.txt  openssl.cnf
certs/openssl-example/certs/: VGVzdDI6U3VKZVRvRG9TOlVuSWRBZE9yR2FOaVphVGlWYTpPckdhTmlaYUNpT246Q2lVZEFkOlByT3ZJbkNpQTpFUw==.pem
certs/openssl-example/crl/: crl.pem
certs/openssl-example/keys/: VGVzdDE6U3VKZVRvVW5POlVuSWRBZE9yR2FOaVphVGlWYTpPckdhTmlaYUNpT246Q2lVZEFkOlByT3ZJbkNpQTpFUw==.pem  VGVzdDI6U3VKZVRvRG9TOlVuSWRBZE9yR2FOaVphVGlWYTpPckdhTmlaYUNpT246Q2lVZEFkOlByT3ZJbkNpQTpFUw==.pem  VGVzdDM6IDpVbklkQWRPckdhTmlaYVRpVmE6T3JHYU5pWmFDaU9uOkNpVWRBZDpQck92SW5DaUE6RVM=.pem  VGVzdDQ6IDpVbklkQWRPckdhTmlaYVRpVmE6T3JHYU5pWmFDaU9uOkNpVWRBZDpQck92SW5DaUE6RVM=.pem
certs/openssl-example/newcerts/: 01.pem  02.pem
certs/openssl-example/req/: VGVzdDE6U3VKZVRvVW5POlVuSWRBZE9yR2FOaVphVGlWYTpPckdhTmlaYUNpT246Q2lVZEFkOlByT3ZJbkNpQTpFUw==.pem  VGVzdDI6U3VKZVRvRG9TOlVuSWRBZE9yR2FOaVphVGlWYTpPckdhTmlaYUNpT246Q2lVZEFkOlByT3ZJbkNpQTpFUw==.pem  VGVzdDM6IDpVbklkQWRPckdhTmlaYVRpVmE6T3JHYU5pWmFDaU9uOkNpVWRBZDpQck92SW5DaUE6RVM=.pem  VGVzdDQ6IDpVbklkQWRPckdhTmlaYVRpVmE6T3JHYU5pWmFDaU9uOkNpVWRBZDpQck92SW5DaUE6RVM=.pem
debian/: changelog  conffiles.ex  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gnomint-default.ex  gnomint.doc-base.EX  init.d.ex  manpage.1  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: WIZARD_IMPLEMENTATION.md  WIZARD_UI_DOCUMENTATION.txt  ca-db-password-protection.txt  ca-properties.txt  gnomint-cli.txt  gnomint-db.dia  test_plan.txt
docs/: 404.html  Gemfile  _config.yml  features.md  index.md  install.md  manual.md  releases.md  tutorial.md
gconf/: Makefile.am  gnomint.schema  gnomint.schemas.in  org.gnome.gnomint.gschema.xml
gui/: Makefile.am  Makefile.in  certificate_popup_menu.ui  certificate_properties_dialog.ui  change_password_dialog.ui  creation_process_window.ui  csr_popup_menu.ui  csr_properties_dialog.ui  dh_parameters_dialog.ui  export_certificate_dialog.ui  get_db_password_dialog.ui  get_password_dialog.ui  get_pkey_dialog.ui  gnomint.appdata.xml.in  gnomint.desktop  gnomint.desktop.in  gnomint.glade  import_file_or_directory_dialog.ui  import_password_dialog.ui  main_window.ui  new_ca_window.ui  new_cert_window.ui  new_crl_dialog.ui  new_req_window.ui  org.gnome.gnomint.appdata.xml.in  org.gnome.gnomint.desktop.in  preferences_dialog.ui  san_editor_dialog.ui  san_manager_widget.ui  wizard_window.ui
m4/: Makefile.am
mime/: Makefile.am  gnomint.xml  org.gnome.gnomint.xml
packaging/: build-i386.sh
packaging/arch/: PKGBUILD.in
packaging/debian/: changelog.in  control  rules
packaging/windows/: Package.wxs  collect-files.sh
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ca.po  cs.po  de.po  es.po  fi.po  fr.po  gnoMint.pot  gnomint.pot  it.po  oc.po  pt_BR.po  ru.po  sk.po  sv.po
src/: Makefile.am  ca-callbacks.c  ca-callbacks.h  ca-cli-callbacks.c  ca-cli-callbacks.h  ca-cli.c  ca-cli.h  ca.c  ca.h  ca_bulk.c  ca_bulk.h  ca_creation.c  ca_creation.h  ca_file.c  ca_file.h  ca_policy.c  ca_policy.h  ca_selector.c  ca_selector.h  cert_diff.c  cert_diff.h  cert_renewal.c  cert_renewal.h  cert_row.c  cert_row.h  certificate_properties.c  certificate_properties.h  country_table.c  country_table.h  creation_process_window.c  creation_process_window.h  crl.c  crl.h  csr_creation.c  csr_creation.h  csr_properties.c  csr_properties.h  dialog.c  dialog.h  export.c  (+50 more)
tests/: Makefile.am  check_cli_algorithms.sh  check_cli_banner.sh  check_cli_dhgen.sh  check_cli_email.sh  check_cli_import.sh  check_cli_importdir.sh  check_cli_info.sh  check_cli_keys.sh  check_cli_lifecycle.sh  check_cli_parity.sh  check_cli_passphrase.py  check_cli_wizard.sh  check_cli_y2038.sh  check_cli_y2038_backfill.sh  check_cli_y2038_import.sh  check_gui_full.py  check_gui_full_wrapper.sh  check_gui_workflow.py  check_ui_consistency.c  check_workflows.c  check_workflows.sh  check_y2k38.c  gui_harness.py  inputtest_client.py  mock_portal.py  openbox-rc.xml  run-gui-test.sh  run-headless.sh  run-mutter.sh  run-xdummy.sh  run-xvfb.sh  test_invariant_certificate_properties.py  test_invariant_pkey_manage.py  testwm.py  x11type.py  xi2key  xi2key.c  xorg-dummy.conf
